test/Fail/Issue2791.err
Issue2791.agda:28.9-13: error: [UnequalTerms]
The terms
  Nat
and
  Bool
are not equal at type Set
when checking that the expression refl has type
F Bool true Nat ?Y ≡ F IFb ?X IFb ?X
